--- a/inst/blantsrc/Makefile
+++ b/inst/blantsrc/Makefile
@@ -2,7 +2,7 @@ LIBWAYNE=-O3 -I ./libwayne/include -L libwayne -lwayne    -lm # -static OPTIMIZE
 #LIBWAYNE=-O0 -I ./libwayne/include -L libwayne -lwayne-g  -lm -ggdb # for debugging
 #LIBWAYNE=-I ./libwayne/include -L libwayne -lwayne-pg -lm -pg   # for profiling
 
-all: canon_maps blant test_blant magic_table
+all: canon_maps blant magic_table
 
 test_blant:
 	# First run blant-sanity for various values of k
